TEST_PROGRAMS/INVALID/02/exprlist.go
package main

func main (){
    //missing comma
    print("hello" "hello")
}
